[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
dotenv = "0.15.0"
percent-encoding = "2.2.0"
reqwest = "0.11.12"
serde = {version="1.0.147", features = ["derive"]}
serde_json = "1.0.87"
tokio = {version="1.21.2", features=["full"]}
url = "2.3.1"
lazy-init = "0.5.1"
r2d2 = "0.8.10"
chrono = "0.4.23"
async-trait = "0.1.58"
anyhow = "1.0.66"
http = "0.2.8"
hyper = "0.14.23"
uuid = {version="1.2.1", features=["serde","v4"]}
indexmap = { version = "1.7.0", features = ["serde-1"] }
clap = "4.0.29"
owo-colors = "3.5.0"
palette = "0.6.1"
rand = "0.8.5"

[dependencies.diesel]
features=["sqlite", "r2d2", "chrono"]
version = "2.0.2"
