[package]
name = "samuraicli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "🌸 World Cup 2022 CLI for Japanese football fans 🌸"
readme = "README.md"
homepage = "https://github.com/ekusi/samuraicli"
repository = "https://github.com/ekusi/samuraicli"
keywords = ["cli", "World Cup", "football", "Japan", "Rust"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
dotenv = "0.15.0"
percent-encoding = "2.2.0"
reqwest = "0.11.14"
serde = {version="1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = {version="1.25.0", features=["full"]}
url = "2.3.1"
lazy-init = "0.5.1"
r2d2 = "0.8.10"
chrono = "0.4.23"
async-trait = "0.1.64"
anyhow = "1.0.69"
http = "0.2.8"
hyper = "0.14.24"
uuid = {version="1.3.0", features=["serde","v4"]}
indexmap = { version = "1.9.2", features = ["serde-1"] }
clap = "4.1.6"
owo-colors = "3.5.0"
palette = "0.6.1"
rand = "0.8.5"
toml = "0.7.2"
directories = "4.0.1"

[dependencies.diesel]
features=["sqlite", "r2d2", "chrono"]
version = "2.0.3"
